<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:netguard="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        netguard:actionViewClass="android.support.v7.widget.SearchView"
        netguard:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_log_live"
        android:checkable="true"
        android:checked="true"
        android:title="@string/menu_live" />
    <item
        android:id="@+id/menu_log_resolve"
        android:checkable="true"
        android:checked="false"
        android:title="@string/menu_resolve" />
    <item
        android:id="@+id/menu_pcap_enabled"
        android:checkable="true"
        android:title="@string/menu_pcap_enabled" />
    <item
        android:id="@+id/menu_pcap_export"
        android:title="@string/menu_pcap_export" />
    <item
        android:id="@+id/menu_log_clear"
        android:title="@string/menu_clear" />
    <item
        android:id="@+id/menu_log_support"
        android:title="@string/menu_support" />
</menu>
